[gd_scene load_steps=6 format=3 uid="uid://baj6pdl2aiekk"]

[ext_resource type="Texture2D" uid="uid://cdqwyvyw3l2v2" path="res://texturas/boton_vf_t.png" id="1_ia8av"]
[ext_resource type="Script" path="res://Escenas simulaciones/UI/menus/scene_selector/scene_selection_menu.gd" id="1_ubyco"]
[ext_resource type="Script" path="res://Escenas simulaciones/UI/menus/scene_selector/caida_libre_button.gd" id="2_up4yk"]
[ext_resource type="Texture2D" uid="uid://dktu2cburw26g" path="res://texturas/button_distancia_mru.png" id="3_gas5y"]
[ext_resource type="Script" path="res://Escenas simulaciones/UI/menus/scene_selector/button_mru.gd" id="5_7sfm5"]

[node name="SceneSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubyco")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0862745, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Scene Selector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Caida_Libre" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Caida Libre"
horizontal_alignment = 1

[node name="Button_caida_libre" type="Button" parent="MarginContainer2/HBoxContainer/Caida_Libre"]
layout_mode = 0
offset_left = 104.0
offset_top = 75.0
offset_right = 440.0
offset_bottom = 389.0
icon = ExtResource("1_ia8av")
script = ExtResource("2_up4yk")

[node name="MRU" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Movimiento Rectilinio Uniforme"
horizontal_alignment = 1

[node name="Button_mru" type="Button" parent="MarginContainer2/HBoxContainer/MRU"]
offset_left = 100.0
offset_top = 75.0
offset_right = 444.0
offset_bottom = 397.0
icon = ExtResource("3_gas5y")
script = ExtResource("5_7sfm5")

[node name="Left" type="Button" parent="MarginContainer2/HBoxContainer/MRU"]
layout_mode = 0
offset_left = 52.0
offset_top = 200.0
offset_right = 73.0
offset_bottom = 248.0

[node name="Right" type="Button" parent="MarginContainer2/HBoxContainer/MRU"]
layout_mode = 0
offset_left = 461.0
offset_top = 201.0
offset_right = 499.0
offset_bottom = 277.0

[connection signal="pressed" from="MarginContainer2/HBoxContainer/MRU/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/MRU/Right" to="." method="_on_right_pressed"]
